@@ -11,6 +11,9 @@ Changes in stable release 2.4.12 (not released yet)
 
 * Allow quotes in conditional command conditions.
 
+* Fixed starting Move at random position when pointer is on a
+  different screen.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.11 (20-Sep-2002)
